fix form submission on ios devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -179,10 +179,6 @@ a:visited {
 	background-color: #fff;
 }
 
-.form__btn {
-	display: none;
-}
-
 .copyright {
 	margin-top: auto;
 	font-size: 1.3rem;
